# useragent

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: CPackConfig.cmake  UserAgent-config-version.cmake.in  UserAgent-config.cmake.in
src/: BaseEnum.hpp  Browser.cpp  Browser.h  BrowserType.cpp  BrowserType.h  DeviceType.cpp  DeviceType.h  Manufacturer.cpp  Manufacturer.h  OperatingSystem.cpp  OperatingSystem.h  RenderingEngine.cpp  RenderingEngine.h  SafariUtils.h  UserAgent.h  Utils.h  Version.cpp  Version.h  VersionFetcher.cpp  VersionFetcher.h
test/: test_useragent_parse.cpp
tests/: test_useragent_parse.cpp
